fixed bonus alignment

--- a/index.css
+++ b/index.css
@@ -141,6 +141,7 @@ h2 {
 
 .bonus {
   width: 400px;
+  margin-left: 5vw;
 }
 
 .bonus .bonus-name {
